@@ -1,3 +1,7 @@
+2007-02-26 Joerg Wunsch <j@uriah.heep.sax.de>
+
+	* avrdude.conf.in: Add the AT90PWM2/3B devices.
+
 2007-02-02 Thomas Fischl <tfischl@gmx.de>
 	* usbasp.c: Changed return value of function usbasp_initialize to stop
         avrdude on communication errors between programmer and target.
